--- a/7_boxModel.html
+++ b/7_boxModel.html
@@ -13,8 +13,9 @@
       .child {
         background-color: blue;
         border: 9px solid red ;
-        padding: 10px;
-        margin: 20px;
+       
+        padding: 10px 0 10px 0;
+        margin: 20px 0 0 20px;
         height: 200px;
         width: 200px;
         
