--- a/10_positioning.html
+++ b/10_positioning.html
@@ -1,3 +1,23 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="default.styles.css" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+
+  <body>
+    <header>
+      <h1>The game of boxes</h1>
+    </header>
+    <div id="parent">
+      <div id="child-1"><br /></div>
+      <div id="child-2"><br /></div>
+      <div id="child-3"><br /></div>
+    </div>
+  </body>
+</html>
+
+<!-- styles.css----
 .parent {
   height: 400px;
   width: 400px;
@@ -29,3 +49,4 @@
   background-color: yellow;
   opacity: 0.5;
 }
+ -->
