--- a/1_tables.html
+++ b/1_tables.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
   </head>
   <body>
-      <table>
-          <thead>
-              <tr>
-                  <th colspan="2">The table header</th>
-              </tr>
-          </thead>
-          <tbody>
-              <tr>
-                  <td>The table body</td>
-                  <td>with two columns</td>
-              </tr>
-          </tbody>
-      </table>
-    </form>
+    <table>
+      <tbody>
+        <th><pre>Student Data</pre></th>
+        <!-- What does pre element do? -->
+        <tr>
+          <td>Roll No.</td>
+          <td>Name</td>
+          <td>Class</td>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Aniket</td>
+          <td>FE</td>
+        </tr>
+        <tr>
+          <td>20</td>
+          <td>Sanket</td>
+          <td>BE</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
