--- a/2_selectors.html
+++ b/2_selectors.html
@@ -12,6 +12,11 @@
       h3 {
         color: yellow;
       }
+      h3 : hover {
+        background-color = blue;
+      }
+      <! This is a psuedo class selector>
+      
     </style>
   </head>
   <body>
