--- a/9_boxInBox_width_try.html
+++ b/9_boxInBox_width_try.html
@@ -17,6 +17,7 @@
       li {
         background-color: yellow;
         display: inline;
+        /* display:block;           try */
         padding: 0.5em;
         /* text-align: center; */
       }
