--- a/14_transformTranslate.html
+++ b/14_transformTranslate.html
@@ -22,8 +22,8 @@
         border-radius: 50%;
         position: absolute;
         right: 0;
-        transform: translate(50%, -50%);
-        /* translate(left, right) */
+        transform: translate(50%, -52%);
+        /* translate(left, right) moves an element 50% of parent to  left & moves parent 52% of parent to right*/
       }
     </style>
   </head>
