--- a/4_inheritance.html
+++ b/4_inheritance.html
@@ -16,6 +16,7 @@
         background-color: blue;
         height: 50px;
       }
+      /** Here child does not inherit the color nor the height or width, child is restricted to parent(acts a container) **/
     </style>
   </head>
 
