--- a/14_transformTranslate.html
+++ b/14_transformTranslate.html
@@ -23,7 +23,7 @@
         position: absolute;
         right: 0;
         transform: translate(50%, -52%);
-        /* translate(left, right) moves an element 50% of parent to  right & moves parent 52% of parent to down*/
+        /* translate(A px, B px) moves an element A px of parent to right & moves parent B px of parent to down so -ve value means left & up*/
       }
     </style>
   </head>
